--- a/app/src/main/res/layout/fragment_scan.xml
+++ b/app/src/main/res/layout/fragment_scan.xml
@@ -2,11 +2,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-     android:radius="10dip"
+
     tools:context="layout.scan"
     android:layout_centerInParent="true"
 android:layout_marginTop="@dimen/nav_header_height"
 android:layout_marginBottom="@dimen/fab_margin"
+    android:layout_marginLeft="@dimen/fab_margin"
+
     >
 <FrameLayout
     android:layout_width="match_parent"
